--- a/src/index.html
+++ b/src/index.html
@@ -14,25 +14,25 @@
   </head>
   <body>
     <script>
-      const season = "summer";
+      const season = 'spring';
 
-      if (season === "winter") {
-        console.log("Зима");
+      if (season === 'winter') {
+        console.log('Зима');
 
         [1, 2, 3, 4, 5].forEach(
           (number) => {
             console.log(number);
           }
         );
-      } else if (season === "summer") {
-        console.log("Літо");
-      } else if (season === "autumn") {
-        console.log("Осінь");
-      } else if (season === "spring") {
-        console.log("Весна");
+      } else if (season === 'summer') {
+        console.log('Літо');
+      } else if (season === 'autumn') {
+        console.log('Осінь');
+      } else if (season === 'spring') {
+        console.log('Весна');
       } else {
         console.log(
-          "Що це за дурниця в зміній"
+          'Що це за дурниця в зміній'
         );
       }
     </script>
