--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,12 @@
     <input type="text" />
 
     <script
-      src="./index.js"
+      src="./js/modules_1.js"
       type="module"
     ></script>
+    <!-- <script
+      src="./js/modules_2.js"
+      type="module"
+    ></script> -->
   </body>
 </html>
