--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,32 @@
       }
     </script>
 
-    <input type="text" />
+    <label
+      >Число
+      <input type="number" data-value
+    /></label>
+
+    <button type="button" data-add>
+      Додати
+    </button>
+
+    <button type="button" data-reset>
+      Очистити
+    </button>
+
+    <p data-output>
+      Сума: <span>0</span>
+    </p>
 
     <script
-      src="./js/modules_1.js"
+      src="./js/btn.js"
       type="module"
     ></script>
+
+    <!-- <script
+      src="./js/modules_1.js"
+      type="module"
+    ></script> -->
     <!-- <script
       src="./js/modules_2.js"
       type="module"
