--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,12 @@
       Сума: <span>0</span>
     </p>
 
-    <script
+    <!-- <script
       src="./js/btn.js"
       type="module"
-    ></script>
+    ></script> -->
+
+    <script src="./js/course.js"></script>
 
     <!-- <script
       src="./js/modules_1.js"
