add changed to course.js

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       } else if (season === 'autumn') {
         console.log('Осінь');
       } else if (season === 'spring') {
-        console.log('Весна');
+        console.log('Весна за 9 днів');
       } else {
         console.log(
           'Що це за дурниця в зміній'
@@ -59,7 +59,10 @@
       type="module"
     ></script> -->
 
-    <script src="./js/course.js"></script>
+    <script
+      src="./js/course.js"
+      type="module"
+    ></script>
 
     <!-- <script
       src="./js/modules_1.js"
