--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       } else if (season === 'autumn') {
         console.log('Осінь');
       } else if (season === 'spring') {
-        console.log('Весна за 3 днів');
+        console.log('Весна :)');
       } else {
         console.log(
           'Що це за дурниця в зміній'
