--- a/src/index.html
+++ b/src/index.html
@@ -59,18 +59,22 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/course.js"
       type="module"
-    ></script>
+    ></script> -->
 
     <!-- <script
-      src="./js/modules_1.js"
+      src="./js/modules-1-1.js"
       type="module"
     ></script> -->
     <!-- <script
-      src="./js/modules_2.js"
+      src="./js/modules-1-2.js"
       type="module"
     ></script> -->
+    <script
+      src="./js/modules-2-1.js"
+      type="module"
+    ></script>
   </body>
 </html>
