--- a/src/index.html
+++ b/src/index.html
@@ -68,12 +68,19 @@
       src="./js/modules-1-1.js"
       type="module"
     ></script> -->
+
     <!-- <script
       src="./js/modules-1-2.js"
       type="module"
     ></script> -->
-    <script
+
+    <!-- <script
       src="./js/modules-2-1.js"
+      type="module"
+    ></script> -->
+
+    <script
+      src="./js/modules-2-2.js"
       type="module"
     ></script>
   </body>
