changed to modules 1, 2, 3

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
           'Що це за дурниця в зміній'
         );
       }
+      console.log(new Date());
     </script>
 
     <label
@@ -54,6 +55,22 @@
       Сума: <span>0</span>
     </p>
 
+    <div>
+      <img
+        src="https://www.volynpost.com/img/modules/news/e/1c/fced9d71d3a27fb3bf5751597e4451ce/cb-jpew31mmovm.jpg"
+        alt="user avatar"
+        width="120px"
+        height="120px"
+      />
+      <p>Name: Ukraine</p>
+      <p>Location: Kyiv</p>
+      <ul>
+        <li>Followers: 5603</li>
+        <li>Views: 4827</li>
+        <li>Likes: 1308</li>
+      </ul>
+    </div>
+
     <!-- <script
       src="./js/btn.js"
       type="module"
@@ -63,8 +80,8 @@
       src="./js/course.js"
       type="module"
     ></script> -->
-
-    <!-- <script
+    <!-- 
+    <script
       src="./js/modules-1-1.js"
       type="module"
     ></script> -->
@@ -74,13 +91,23 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-2-1.js"
+      type="module"
+    ></script> -->
+
+    <script
+      src="./js/modules-2-2.js"
       type="module"
     ></script>
 
     <!-- <script
-      src="./js/modules-2-2.js"
+      src="./js/modules-3-1.js"
+      type="module"
+    ></script> -->
+
+    <!-- <script
+      src="./js/modules-3-2.js"
       type="module"
     ></script> -->
   </body>
