--- a/src/index.html
+++ b/src/index.html
@@ -96,10 +96,10 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-2-2.js"
       type="module"
-    ></script>
+    ></script> -->
 
     <!-- <script
       src="./js/modules-3-1.js"
@@ -110,5 +110,15 @@
       src="./js/modules-3-2.js"
       type="module"
     ></script> -->
+
+    <script
+      src="./js/modules-4-1.js"
+      type="module"
+    ></script>
+
+    <script
+      src="./js/modules-4-2.js"
+      type="module"
+    ></script>
   </body>
 </html>
