--- a/src/index.html
+++ b/src/index.html
@@ -106,10 +106,10 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-3-2.js"
       type="module"
-    ></script>
+    ></script> -->
 
     <script
       src="./js/modules-4-1.js"
