--- a/src/index.html
+++ b/src/index.html
@@ -101,10 +101,10 @@
       type="module"
     ></script> -->
 
-    <!-- <script
+    <script
       src="./js/modules-3-1.js"
       type="module"
-    ></script> -->
+    ></script>
 
     <!-- <script
       src="./js/modules-3-2.js"
