--- a/src/index.html
+++ b/src/index.html
@@ -101,23 +101,33 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-3-1.js"
       type="module"
-    ></script>
+    ></script> -->
 
     <!-- <script
       src="./js/modules-3-2.js"
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-4-1.js"
+      type="module"
+    ></script> -->
+
+    <script
+      src="./js/modules-4-2.js"
       type="module"
     ></script>
 
     <script
-      src="./js/modules-4-2.js"
+      src="./js/modules-5-1.js"
+      type="module"
+    ></script>
+
+    <script
+      src="./js/modules-5-2.js"
       type="module"
     ></script>
   </body>
