--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <script>
-      const season = 'spring';
+      const season = 'summer';
 
       if (season === 'winter') {
         console.log('Зима');
@@ -25,7 +25,7 @@
           }
         );
       } else if (season === 'summer') {
-        console.log('Літо');
+        console.log('Літо 🌞');
       } else if (season === 'autumn') {
         console.log('Осінь');
       } else if (season === 'spring') {
@@ -71,10 +71,10 @@
       </ul>
     </div>
 
-    <!-- <script
+    <script
       src="./js/btn.js"
       type="module"
-    ></script> -->
+    ></script>
 
     <!-- <script
       src="./js/course.js"
@@ -116,10 +116,10 @@
       type="module"
     ></script> -->
 
-    <script
+    <!-- <script
       src="./js/modules-4-2.js"
       type="module"
-    ></script>
+    ></script> -->
 
     <script
       src="./js/modules-5-1.js"
