--- a/src/index.html
+++ b/src/index.html
@@ -121,10 +121,7 @@
       type="module"
     ></script> -->
 
-    <script
-      src="./js/modules-5-1.js"
-      type="module"
-    ></script>
+    <script src="./js/modules-5-1.js"></script>
 
     <script
       src="./js/modules-5-2.js"
