--- a/src/index.html
+++ b/src/index.html
@@ -111,10 +111,10 @@
       type="module"
     ></script> -->
 
-    <!-- <script
+    <script
       src="./js/modules-4-1.js"
       type="module"
-    ></script> -->
+    ></script>
 
     <!-- <script
       src="./js/modules-4-2.js"
