--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           }
         );
       } else if (season === 'summer') {
-        console.log('Літо 🌞 ⛈️');
+        console.log('Літо 🌞');
       } else if (season === 'autumn') {
         console.log('Осінь');
       } else if (season === 'spring') {
