--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link />
     <meta charset="UTF-8" />
     <meta
       http-equiv="X-UA-Compatible"
@@ -11,8 +12,16 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>test JS</title>
+    <link
+      rel="stylesheet"
+      href="./styles.css"
+    />
   </head>
+
   <body>
+    <h1 class="js-title">
+      Hello world
+    </h1>
     <script>
       const season = 'summer';
 
@@ -36,6 +45,7 @@
         );
       }
       console.log(new Date());
+      console.log('❤️');
     </script>
 
     <label
@@ -62,7 +72,7 @@
         width="120px"
         height="120px"
       />
-      <p>Name: Ukraine</p>
+      <p class="name">Name: Ukraine</p>
       <p>Location: Kyiv</p>
       <ul>
         <li>Followers: 5603</li>
@@ -115,16 +125,21 @@
       src="./js/modules-4-1.js"
       type="module"
     ></script> -->
-
+    <!-- 
     <script
       src="./js/modules-4-2.js"
       type="module"
-    ></script>
+    ></script> -->
 
-    <script src="./js/modules-5-1.js"></script>
+    <!-- <script src="./js/modules-5-1.js" type="module"></script>
 
     <script
       src="./js/modules-5-2.js"
+      type="module"
+    ></script> -->
+
+    <script
+      src="./js/modules-6.js"
       type="module"
     ></script>
   </body>
