--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,22 @@
   </head>
 
   <body>
-    <h1 class="js-title">
+    <h1
+      class="js-title"
+      id="test"
+      hidden="true "
+      data-id="title"
+      data-goods="apple"
+    >
       Hello world
     </h1>
+
+    <ul class="js-list">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+
     <script>
       const season = 'summer';
 
