--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <h1
+    <!-- <h1
       class="js-title"
       id="test"
       hidden="true "
@@ -33,7 +33,8 @@
       <li>1</li>
       <li>2</li>
       <li>3</li>
-    </ul>
+    </ul> -->
+    <ul class="js-container"></ul>
 
     <script>
       const season = 'summer';
