--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,16 @@
   </head>
 
   <body>
+    <button class="js-click">
+      Click
+    </button>
+    <div
+      class="js-container container"
+    ></div>
+    <!-- <h1 class="js-title">
+      Lorem ipsum dolor sit amet
+      consectetur adipisicing elit.
+    </h1> -->
     <!-- <h1
       class="js-title"
       id="test"
@@ -34,6 +44,17 @@
       <li>2</li>
       <li>3</li>
     </ul> -->
+
+<!-- <input type="text" class="js-input"> -->
+
+<form action="submit" class="js-form">
+  <input type="text" class="form">
+  <input type="email" class="form">
+  <input type="number" class="form">
+  <button>Submit</button>
+</form>
+
+
     <ul class="js-container"></ul>
 
     <script>
