--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,13 @@
   </head>
 
   <body>
-    <button class="js-click">
+    <!-- <button class="js-click">
       Click
-    </button>
-    <div
+    </button> -->
+    <!-- <div
       class="js-container container"
-    ></div>
+    ></div> -->
+
     <!-- <h1 class="js-title">
       Lorem ipsum dolor sit amet
       consectetur adipisicing elit.
@@ -47,12 +48,12 @@
 
 <!-- <input type="text" class="js-input"> -->
 
-<form action="submit" class="js-form">
-  <input type="text" class="form">
-  <input type="email" class="form">
-  <input type="number" class="form">
+<!-- <form action="submit" class="js-form">
+  <input type="text" class="form" name="userName">
+  <input type="email" class="form" name="userEmail">
+  <input type="number" class="form" name="userAge">
   <button>Submit</button>
-</form>
+</form> -->
 
 
     <ul class="js-container"></ul>
