--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,17 @@
   <button>Submit</button>
 </form> -->
 
+<form action="submit" class="js-search-form">
+  <input type="text" name = 'query'>
+  <select name="select">
+    <option value="model">Марка</option>
+    <option value="type">Модель</option>
+  </select>
+  <button>Пошук</button>
+</form>
+
+<ul class="js-list"></ul>
+
 
     <ul class="js-container"></ul>
 
