--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,12 @@
   <button>Submit</button>
 </form> -->
 
+
+<div>
+  <h2>Обрані авто</h2>
+  <ul class="js-favorite-list "></ul>
+</div>
+
 <form action="submit" class="js-search-form">
   <input type="text" name = 'query'>
   <select name="select">
