--- a/src/index.html
+++ b/src/index.html
@@ -46,17 +46,16 @@
       <li>3</li>
     </ul> -->
 
-<!-- <input type="text" class="js-input"> -->
+    <!-- <input type="text" class="js-input"> -->
 
-<!-- <form action="submit" class="js-form">
+    <!-- <form action="submit" class="js-form">
   <input type="text" class="form" name="userName">
   <input type="email" class="form" name="userEmail">
   <input type="number" class="form" name="userAge">
   <button>Submit</button>
 </form> -->
 
-
-<div>
+    <!-- <div>
   <h2>Обрані авто</h2>
   <ul class="js-favorite-list "></ul>
 </div>
@@ -73,7 +72,22 @@
 <ul class="js-list"></ul>
 
 
-    <ul class="js-container"></ul>
+<ul class="js-container"></ul> -->
+
+    <form class="form">
+      <label>
+        <span>Text</span>
+        <input
+          type="text"
+          name="text"
+        />
+      </label>
+      <button type="submit">
+        + Add
+      </button>
+    </form>
+
+    <ul class="list"></ul>
 
     <script>
       const season = 'summer';
@@ -193,6 +207,10 @@
 
     <script
       src="./js/modules-6.js"
+      type="module"
+    ></script>
+    <script
+      src="./js/home-dom.js"
       type="module"
     ></script>
   </body>
