--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
         <input
           type="text"
           name="text"
+          placeholder="Enter text..."
         />
       </label>
       <button type="submit">
@@ -117,7 +118,11 @@
 
     <label
       >Число
-      <input type="number" data-value
+      <input
+        type="number"
+        data-value
+        class="input_number"
+        placeholder="Enter number... 😎"
     /></label>
 
     <button type="button" data-add>
