--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,8 @@
 
 <ul class="js-container"></ul> -->
 
+<!-- <button>Push me</button> -->
+
     <form class="form">
       <label>
         <span>Text</span>
