modal window 6.js

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
 
 <ul class="js-container"></ul> -->
 
-<!-- <button>Push me</button> -->
+    <!-- <button>Push me</button> -->
 
     <form class="form">
       <label>
@@ -154,6 +154,26 @@
         <li>Likes: 1308</li>
       </ul>
     </div>
+
+    <!-- модальне вікно -->
+
+    <!-- <button
+      class="open-btn"
+      type="button"
+    >
+      O
+    </button>
+    <div class="backdrop is-hidden">
+      <div class="modal">
+        <button
+          class="close-btn"
+          type="button"
+        >
+          X
+        </button>
+      </div>
+    </div> -->
+    <!-- модальне вікно -->
 
     <script
       src="./js/btn.js"
